ADD Inscription fxml